fix spacing on homepage

--- a/proj-3/styles.css
+++ b/proj-3/styles.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
@@ -25,7 +26,7 @@ body {
   height: 100vh;
   background: url(eipc2.svg) no-repeat;
   background-position: center;
-  background-position-y: -10px;
+  /* background-position-y: -10px; */
   /* background-attachment: fixed; */
   background-size: cover;
 }
@@ -99,52 +100,32 @@ body svg path.fill {
   opacity: 1;
 }
 
-#hero {
-  /* position: absolute; */
-  /* top: 0;
-  left: 0; 
-  bottom: 0; 
-  right: 0; */
-  /* margin: auto; */
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
+#main-title {
+  position: absolute;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
   text-align: center;
-  position: relative;
-  top: 40%;
-  transform: translateY(-40%);
 }
 
-h1 {
+#main-title h1 {
   color: white;
   font-family: 'Rye', cursive;
   font-weight: normal;
   font-size: 500%;
-  text-align: center;
-  position: absolute;
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
-  text-align: center;
+  white-space: nowrap;
+  margin: 0px;
   opacity: 0;
 }
 
-h2 {
+#main-title h2 {
   font-family: 'Open Sans', sans-serif;
   font-size: 25px;
   font-weight: normal;
   color: #999;
-  text-align: center;
-  position: absolute;
-  /* top: 30px;  */
-  top: 11vh;
-  left: 0; 
-  bottom: 0; 
-  right: 0;
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
-  text-align: center;
+  margin: 0px;
+  margin-top: -4px;
   opacity: 0;
 }
 
